<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/main_background">

    <LinearLayout
        android:id="@+id/left_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/blue_background"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="40dp"
        android:paddingRight="60dp"
        android:paddingBottom="40dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/today_background"
            android:padding="5dp">

            <TextView
                android:id="@+id/today_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/today"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/today_text"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/set_progress_text_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="540ml"
                android:textColor="#FFFFFF"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/set_progress_text_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/1ml"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/set_progress_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_progress_text_done"
            android:layout_marginTop="8dp"
            android:text="@string/completed"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/left_layout"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/next_activity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:text="@string/next_activity"
            android:textColor="#808080"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/drink_water_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/next_activity_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/drink_water_icon"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentStart="true"
                android:layout_marginRight="8dp"
                android:src="@mipmap/drink_water_icon" />

            <TextView
                android:id="@+id/set_drink_water_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/drink_water_icon"
                android:text="@string/defaultDrinkType"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drink_water_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentStart="true"
                android:layout_marginRight="8dp"
                android:src="@mipmap/time_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/time_icon">

                <TextView
                    android:id="@+id/time_text_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/set_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTime"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/quantity_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/quantity_icon"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentStart="true"
                android:layout_marginRight="8dp"
                android:src="@mipmap/quantity_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/quantity_icon">

                <TextView
                    android:id="@+id/quantity_text_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="Quantity:"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/set_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Quantity Set"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>